# cropio_excel

./: .gitignore  README.md  datas.py  def.xlsx  def_kamaz.xlsx  def_production.xlsx  def_simple.xlsx  excel.py  info.py  interface.py  interface.spec  interface_helpers.py  main.py  pyproject.toml  requirements.txt  test.py  test_tasks_async.py
tests/: test_check_shifts.py  test_create_excels.py
Выработка/: Выработка.xlsx
