[tool.poetry]
name = "cropio_excel"
version = "0.1.0"
description = ""
authors = ["rinat229 <rdkhaliulin@miem.hse.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.59.0"
openpyxl = "^3.0.9"
requests = "^2.27.1"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.8"
mypy = "^0.950"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 120